k8s/account-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
      annotations:
        azure.workload.identity/client-id: <MANAGED_IDENTITY_CLIENT_ID>
    spec:
      containers:
      - name: account-service
        image: <ACR_LOGIN_SERVER>/account-service:<TAG>
        ports:
        - containerPort: 8083
