k8s/customer-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
      annotations:
        azure.workload.identity/client-id: <MANAGED_IDENTITY_CLIENT_ID>
    spec:
      containers:
      - name: customer-service
        image: <ACR_LOGIN_SERVER>/customer-service:<TAG>
        ports:
        - containerPort: 8081
