k8s/document-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: document-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: document-service
  template:
    metadata:
      labels:
        app: document-service
      annotations:
        azure.workload.identity/client-id: <MANAGED_IDENTITY_CLIENT_ID>
    spec:
      containers:
      - name: document-service
        image: <ACR_LOGIN_SERVER>/document-service:<TAG>
        ports:
        - containerPort: 8082
