k8s/account-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service
spec:
  selector:
    app: account-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
