k8s/document-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: document-service
spec:
  selector:
    app: document-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
