k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: <YOUR_DOMAIN>
    http:
      paths:
      - path: /customer
        pathType: Prefix
        backend:
          service:
            name: customer-service
            port:
              number: 80
      - path: /document
        pathType: Prefix
        backend:
          service:
            name: document-service
            port:
              number: 80
      - path: /account
        pathType: Prefix
        backend:
          service:
            name: account-service
            port:
              number: 80
      - path: /notification
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 80
